@@ -7,8 +7,8 @@ use 5.010;
 use Path::Tiny qw( path );
 use Pod::Usage qw( pod2usage );
 use Getopt::Long qw( GetOptions );
-use File::HomeDir;
 use Sereal 3.015 qw( decode_sereal );
+use File::Glob qw( bsd_glob );
 use URI;
 use Number::Bytes::Human qw( format_bytes );
 
@@ -60,7 +60,7 @@ GetOptions(
   'help|h'    => sub { pod2usage( -exitval => 0 ) },
 ) || pod2usage( -exitval => 2 );
 
-my $root = path(File::HomeDir->my_home, '.alienbuild/plugin_fetch_cache');
+my $root = path(bsd_glob '~/.alienbuild/plugin_fetch_cache');
 
 sub recurse
 {
