@@ -22,8 +22,8 @@ remove = autodie
 remove = File::Temp
 remove = Pod::Usage
 remove = Getopt::Long
+remove = File::Glob
 
-remove = File::HomeDir::Test
 remove = Alien::Build::Plugin
 
 [Prereqs]
