@@ -4,11 +4,11 @@ use strict;
 use warnings;
 use 5.010;
 use Alien::Build::Plugin;
-use File::HomeDir 1.00;
 use URI 1.71;
 use Path::Tiny 0.100 ();
 use Sereal 3.015 qw( encode_sereal decode_sereal );
 use Digest::MD5;
+use File::Glob qw( bsd_glob );
 
 # ABSTRACT: Alien::Build plugin to cache files downloaded from the internet
 # VERSION
@@ -38,8 +38,7 @@ sub _local_file
   my($uri) = @_;
 
   Path::Tiny
-    ->new(File::HomeDir->my_home)
-    ->child('.alienbuild/plugin_fetch_cache')
+    ->new(bsd_glob '~/.alienbuild/plugin_fetch_cache')
     ->child($uri->scheme)
     ->child($uri->host)
     ->child($uri->path)
@@ -87,8 +86,7 @@ sub init
             close $fh;
           }
           
-          my $data = Path::Tiny->new(File::HomeDir->my_home)
-                     ->child('.alienbuild/plugin_fetch_cache/payload')
+          my $data = Path::Tiny->new(bsd_glob '~/.alienbuild/plugin_fetch_cache/payload')
                      ->child($md5->hexdigest)
                      ->child($res->{filename});
           $data->parent->mkpath;
